<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_btn_proyecto001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_proyecto001"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goToProyecto001"
        />

    <Button
        android:id="@+id/main_btn_proyecto002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_proyecto002"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_btn_proyecto001"
        android:onClick="goToProyecto002"
        />

    <Button
        android:id="@+id/main_btn_proyecto003"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_proyecto003"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_btn_proyecto002"
        android:onClick="goToProyecto003"
        />

    <Button
        android:id="@+id/main_btn_proyecto004"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_proyecto004"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_proyecto003"
        android:onClick="goToProyecto004"
        />

    <Button
        android:id="@+id/main_btn_proyecto005"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_proyecto005"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_proyecto004"
        android:onClick="goToProyecto005"
        />

</androidx.constraintlayout.widget.ConstraintLayout>