<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Proyecto005">

    <EditText
        android:id="@+id/proyecto005_et_valor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/proyecto005_et_valor1"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/proyecto005_et_valor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proyecto005_et_valor1"
        android:layout_marginTop="16dp"
        android:hint="@string/proyecto005_et_valor2"
        android:inputType="number" />

    <Spinner
        android:id="@+id/proyecto005_sp_operacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/proyecto005_et_valor2"/>

    <Button
        android:id="@+id/proyecto005_btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proyecto005_sp_operacion"
        android:layout_marginTop="16dp"
        android:text="@string/proyecto005_btn_calcular" />

    <TextView
        android:id="@+id/proyecto005_tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proyecto005_tv_resultado"
        android:layout_marginTop="16dp"
        android:layout_below="@id/proyecto005_btn_calcular"
        />

</RelativeLayout>