<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".proyecto003.Proyecto003">

    <EditText
        android:id="@+id/proyecto003_et_valor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/proyecto003_et_valor1"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/proyecto003_et_valor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/proyecto003_et_valor2"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/proyecto003_et_valor1" />

    <Button
        android:id="@+id/proyecto003_btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/proyecto003_btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proyecto003_et_valor2" />

    <TextView
        android:id="@+id/proyecto003_tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:text="@string/proyecto003_et_resultado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proyecto003_btn_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>